💄 [Porfolio] - fixed dynamic width and margin alignment of porftolio List

--- a/portfolio/src/components/Portfolio/Portfolio.module.scss
+++ b/portfolio/src/components/Portfolio/Portfolio.module.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-top: 5rem;
 
   & .portfolio__heading {
     color: $foreground-color;
@@ -32,6 +33,7 @@
 
       @media (max-width: 48rem) {
         flex-direction: column;
+        overflow-y: scroll;
       }
 
       &::-webkit-scrollbar {
